# xgtvm

./: .rake_tasks~  CMakeLists.txt  README.md  Rakefile
libraries/: listener.hpp  machine.cpp  machine.hpp  word.hpp
programs/: xgtvm.cpp  xgtvm_tests.cpp
